fixed folder text overflow, and directory path left scroll problem

--- a/public/src/components/Bar/DirectoryBar.scss
+++ b/public/src/components/Bar/DirectoryBar.scss
@@ -9,7 +9,6 @@ main.DirectoryBar {
   background-color: #fff;
   height: 35px;
   padding: 0 5px;
-  // overflow: hidden;
   max-width: 100vw;
   z-index: 2;
   .clickedItem {
@@ -17,10 +16,9 @@ main.DirectoryBar {
     font-size: 1rem;
   }
   .address {
-    @include flex;
-    height: 100%;
+    display: flex;
     margin-left: 5px;
-    overflow-y: scroll;
+    overflow-x: scroll;
     &::-webkit-scrollbar {
       width: 0 !important;
       height: 0 !important;
